# sound-ai

./: Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
src/: app.py  main.py  mix_audio.py  mix_audio_cli.py  streamlit.py
src/dy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scripts/: mix_audio.py  mix_audio_cli.py
