[project]
name = "dy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "demucs>=4.0.1",
    "moviepy>=2.2.1",
    "pandas>=2.3.3",
    "pytubefix>=10.3.3",
    "requests>=2.32.5",
    "torchcodec>=0.8.1",
    "yt-dlp>=2025.11.12",
]
